# AiADHDProject

./: .gitignore  .webui_secret_key  API.py  README.md  audiotest.py  claudeTest.py  create.txt  faceTracker.txt  initPrompt.txt  llmFile.txt  main.py  pyproject.toml  requirements.txt  test.py  test1.py  test2.py
.open-webui/: webui.db
.open-webui/uploads/: 117e4c5a-56a1-41eb-8eb5-2d2594c5021a_StudyHistory.txt  24f5c9bc-ae7b-48c1-bb76-d19732aa0911_StudyHistory.txt  66706f88-99de-4ccc-85f1-fc4e9dc805cf_Knowledge.txt  6dca2c0e-f1fd-42bf-8c4e-569a639a9a18_StudyHistory.txt  7d9f055d-17b2-447e-b532-8e0cf3223869_StudyHistory.txt  926f9e73-5deb-4e22-af46-2812c7093002_StudyHistory.txt  93deb23f-305b-4ddd-b10d-2b3ca02a2ca6_StudyHistory.txt  9443b937-e07f-425e-b248-cf45eb535541_StudyHistory.txt  ab1cbbdc-402a-4eaa-b520-cd8e0438a970_StudyHistory.txt  ca2ddac4-8bc4-4707-9813-05a08a8a7f3d_StudyHistory.txt  ffc9f73d-1991-418c-9d96-791ffbd09871_StudyHistory.txt
.open-webui/vector_db/: chroma.sqlite3
KB/: Knowledge.txt  StudyHistory.txt
LLM/: ADHD RAG prompt.txt  GenerateActions.txt  KnowledgePrompt.txt  MarioPrompt.txt  SummaryPrompt.txt  SysPrompt.txt  create_ADHD.txt  create_Listed.txt  initPrompt.txt
Logs/: VLM.txt  faceTracker.txt  gazeTracker.txt  initPrompt.txt  initPrompt2.txt
Sensors/Moondream/: main.py  webcam_demo.py  webcam_moondream_transformers.py
Sensors/PythonFaceTracker/: main.py  test2.py
Sensors/PythonGazeTracker/: OutputTest.py  example.py
Sensors/moondream/: live_testcam.py  main.py
SongServer/: API.py  API_Client.py  SongClient.py  SongServer.py
(+1 files in other folders)
