[project]
name = "aiadhdproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "accelerate==0.32.1",
    "datasets==3.2.0",
    "dlib>=20.0.0",
    "editdistance==0.8.1",
    "huggingface-hub==0.24.0",
    "mediapipe>=0.10.21",
    "numpy==1.26.4",
    "opencv-python>=4.11.0.86",
    "pexpect>=4.9.0",
    "pyvips==2.2.3",
    "pyvips-binary==8.16.0",
    "scipy>=1.16.0",
    "setuptools==70.0.0",
    "torch==2.5.1",
    "transformers==4.44.0",
]
