[project]
name = "aiadhdproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dlib>=20.0.0",
    "mediapipe>=0.10.14",
    "moondream==0.0.6",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "scipy>=1.16.0",
    "setuptools>=80.9.0",
]
